# nautilus

./: .coveralls.yml  .gitignore  .travis.yml  LICENSE  Makefile  README.md  base.py  config.yaml  create_admin.py  find_receipt-old.py  insert.py  instanses.py  pyproject.toml  server.py  setup.cfg  tasks-old.py  tasks.py  wsgi.py
.github/workflows/: pythonpackage.yml
migrations/versions/: 2d3389abdc18_initial_migration.py  38a02fafec6b_add_ltree_type_to_category.py  3b5bbd75c8df_add_organization_column_to_receipt.py  6b4d8fda99d1_add_organization_column_to_purchase_and_.py  7427f2576900_.py  78d2adacc282_add_telephone_to_user.py  8c11528e8165_initial_migration.py  8e9e5bcada6e_add_ltree_to_purchase.py  a30f4e709c72_add_email_to_users.py  cf53693abea5_initial.py  e4c839e36136_.py  e8a31f998d26_add_base.py  f131ffc2c93a_add_valid_column_to_purchase.py
tests/: test_admin.py  test_api.py  test_landing.py  test_receipt_handler.py  tests.py
webapp/: __init__.py  application.py  config.py  db.py  forms.py
webapp/admin/: forms.py  views.py
webapp/api/: views.py
webapp/landing/: views.py
webapp/receipt/: find_receipt.py  forms.py  models.py  temp_data.py  views.py
webapp/receipt/utils/: receipt_handler.py
webapp/statistic/: forms.py  views.py
webapp/statistic/utils/: query.py
webapp/templates/: base.html  footer.html  header.html  index.html  menu.html
webapp/templates/admin/: admin_index.html
webapp/templates/receipt/: my_detailed_receipt.html  my_outlay.html  my_receipt.html  qrdata.html  (+2 more)
webapp/user/: decorators.py  forms.py  models.py  views.py
(+5 files in other folders)
