[tool.poetry]
name = "nautilus"
version = "0.1.0"
description = "control of personal expenses"
authors = ["AlexanderLyaksa <sanchos2004@gmail.com>", "M Kraynev <becaury@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
requests = "^2.23.0"
SQLAlchemy = "^1.3.13"
flask-sqlalchemy = "^2.4.1"
conflow = "^0.0.2"
flask-wtf = "^0.14.3"
flask-login = "^0.5.0"
pyopenssl = "^19.1.0"
flask-cors = "^3.0.8"
flask-migrate = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
